fix: align the buttons to middle

--- a/modules/search/assets/hb/modules/hb-header-search/scss/index.scss
+++ b/modules/search/assets/hb/modules/hb-header-search/scss/index.scss
@@ -16,7 +16,6 @@
 
 .hb-header-search-form {
     cursor: pointer;
-    margin-bottom: 0.25rem;
 
     input {
         cursor: pointer;
